Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34973

Qt Assistant crashes with operational words, such as 'no', 'not', 'and', in the exact phrase search field under advanced search.

    XMLWordPrintable

Details

    Description

      The stack trace below is taken from Qt 4.8.5 environment on Windows 7 system.

      0	lucene::search::IndexSearcher::_search	IndexSearcher.cpp	249	0xf76ebf3	
      1	lucene::search::Hits::getMoreDocs	Hits.cpp	110	0xf76bd97	
      2	lucene::search::Hits::Hits	Hits.cpp	60	0xf76baa1	
      3	QCLuceneHits::QCLuceneHits	qhits.cpp	52	0xf7d27b2	
      4	QCLuceneSearcher::search	qsearchable.cpp	77	0xf7d3e34	
      5	QCLuceneSearcher::search	qsearchable.cpp	71	0xf7d3ddb	
      6	fulltextsearch::clucene::QHelpSearchIndexReaderClucene::run	qhelpsearchindexreader_clucene.cpp	139	0x500e2a1c	
      7	QThreadPrivate::start	qthread_win.cpp	326	0x66bf2c7f	
      8	_beginthreadex	MSVCR100D		0xfc1a273	
      9	_beginthreadex	MSVCR100D		0xfc1a204	
      10	BaseThreadInitThunk	kernel32		0x7740336a	
      11	__RtlUserThreadStart	ntdll32		0x77c49f72	
      12	_RtlUserThreadStart	ntdll32		0x77c49f45	
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            heimrich Karsten Heimrich
            leonlee Leonard Lee
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes