Fix Assistant crash with operational words.

Phrase queries with a single term are not allow in clucene,
so once we encounter a search string like "and Next", which
in turn will result in a single word, we use a term query.

Task-number: QTBUG-34973

Change-Id: I9328abf0e96428577cdee15b1671393074cc91c2
Reviewed-by: Christian Kandeler <christian.kandeler@digia.com>